<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="1">
    <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:id="@+id/textView1" android:layout_width="wrap_content" android:text="@string/uriInputLabel"></TextView>
    <EditText android:id="@+id/editText1" android:layout_height="wrap_content" android:layout_width="match_parent">
        <requestFocus></requestFocus>
    </EditText>
    <Button android:text="@string/getStats" 
    android:id="@+id/button1" 
    android:layout_height="wrap_content" 
    android:layout_width="wrap_content"
    android:onClick="clickHandler"></Button>
    
    
    <TableLayout android:id="@+id/tableLayout1" android:layout_height="wrap_content" android:layout_width="match_parent">
    
        <TableRow android:id="@+id/tableRow0" android:layout_width="wrap_content" android:layout_margin="2dp" android:layout_height="wrap_content">
          <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:id="@+id/textView4" android:layout_width="wrap_content" android:text="@string/dateLabel"></TextView>
          <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:text="" android:layout_height="wrap_content" android:id="@+id/dateView" android:layout_width="wrap_content"></TextView>
        </TableRow>
        <TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content" android:layout_margin="2dp" android:layout_height="wrap_content">
          <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:id="@+id/textView2" android:layout_width="wrap_content" android:text="@string/subsLabel"></TextView>
          <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:text="" android:layout_height="wrap_content" android:id="@+id/subsView" android:layout_width="wrap_content"></TextView>
        </TableRow>
        <TableRow android:id="@+id/tableRow2" android:layout_width="wrap_content" android:layout_margin="2dp" android:layout_height="wrap_content">
          <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:id="@+id/textView2" android:layout_width="wrap_content" android:text="@string/hitsLabel"></TextView>
          <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:text="" android:layout_height="wrap_content" android:id="@+id/hitsView" android:layout_width="wrap_content"></TextView>
        </TableRow>
        <TableRow android:id="@+id/tableRow3" android:layout_width="wrap_content" android:layout_margin="2dp" android:layout_height="wrap_content">
          <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:id="@+id/textView2" android:layout_width="wrap_content" android:text="@string/downloadsLabel"></TextView>
          <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:text="" android:layout_height="wrap_content" android:id="@+id/downloadsView" android:layout_width="wrap_content"></TextView>
        </TableRow>
        <TableRow android:id="@+id/tableRow4" android:layout_width="wrap_content" android:layout_margin="2dp" android:layout_height="wrap_content">
          <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:id="@+id/textView2" android:layout_width="wrap_content" android:text="@string/reachLabel"></TextView>
          <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:text="" android:layout_height="wrap_content" android:id="@+id/reachView" android:layout_width="wrap_content"></TextView>
        </TableRow>
        <TableRow android:id="@+id/tableRow5" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <Button android:layout_height="wrap_content" android:text="@string/startButton" android:id="@+id/button2" android:layout_width="wrap_content"></Button>
            <Button android:layout_height="wrap_content" android:id="@+id/button3" android:layout_width="wrap_content" android:text="@string/stopButton"></Button>
        </TableRow>
    </TableLayout>
</LinearLayout>
